@@ -3,7 +3,9 @@ mailscripts (28-1) UNRELEASED; urgency=medium
   * mailscripts.el:
     - new commands: mailscripts-git-format-patch-{attach,drafts}
     - new DWIM wrapper command: mailscripts-prepare-patch
-    - notmuch-extract-thread-patches: add Gnus support
+    - notmuch-extract-{thread,message}-patches: add Gnus support
+      notmuch-extract-message-patches{,-to-project} are now aliases for
+      mailscripts-extract-message-patches{,-to-project}.
     - rewrite short description and add a brief commentary
     - load the notmuch library only when code that requires it is called
     - move the mailscripts customisation group into the mail group
